--- a/library.bib
+++ b/library.bib
@@ -1,5 +1,5 @@
 @misc{PCAtools,
-  author = {K Blighe and M Lewis and A Lun},
+  author = {K Blighe and A Lun},
   title = {{PCAtools: everything Principal Components Analysis.}},
   year = 2018,
   howpublished = {\url{https://github.com/kevinblighe}}
