Update version to v2, and update vignette text

--- a/inst/library.bib
+++ b/inst/library.bib
@@ -1,8 +1,8 @@
 @misc{PCAtools,
   author = {K Blighe and A Lun},
   title = {{PCAtools: everything Principal Components Analysis.}},
-  year = 2018,
-  howpublished = {\url{https://github.com/kevinblighe}}
+  year = 2019,
+  howpublished = {\url{https://github.com/kevinblighe/PCAtools.}}
 }
 
 @article{BligheK,
