--- a/inst/NEWS
+++ b/inst/NEWS
@@ -8,3 +8,5 @@ CHANGES IN VERSION 2.0.0
  - added findElbowPoint function, which finds the elbow point in the curve of variance explained and which can also be used to determine the number of principal components to retain (courtesy Aaron Lun)
  - user can now specify custom labels for points
  - fixed bug with singlecol parameter for biplot colouring everything black
+ - added p-value adjustment for eigencorplot (aleighbrown)
+ - eigencorplot now automatically converts non-numeric columns to numeric (aleighbrown)
