--- a/vignettes/library.bib
+++ b/vignettes/library.bib
@@ -32,3 +32,22 @@
   year = 2019,
   howpublished = {R package version 1.0.0, https://github.com/LTLA/BiocSingular.}
 }
+
+@article{Gabriel,
+  added-at = {2010-10-05T23:07:00.000+0200},
+  author = {KR Gabriel},
+  biburl = {https://www.bibsonomy.org/bibtex/273d67d1ec1a7d1a9f6d25c3b30141a3e/vivion},
+  description = {The biplot graphic display of matrices with application to principal component analysis — Biometrika},
+  interhash = {a880b8f09e65fb8419fbb6f066480994},
+  intrahash = {73d67d1ec1a7d1a9f6d25c3b30141a3e},
+  journal = {Biometrika},
+  keywords = {biplot display graphic multivariate pca visualization},
+  number = 3,
+  pages = {453-467},
+  timestamp = {2010-10-05T23:07:00.000+0200},
+  title = {The biplot graphic display of matrices with application to principal component analysis 1.},
+  url = {http://biomet.oxfordjournals.org/content/58/3/453.short},
+  volume = 58,
+  year = 1971
+}
+
