--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,6 +1,10 @@
-CHANGES IN VERSION 1.0.0
+
+CHANGES IN VERSION 2.2.0
 ------------------------
- - added new function getLoadings, which returns component loadings
+ - added support to overlay variable loadings arrows on biplot
+ - better positioning of PC labels in triangular pairs plot
+ - added functionality to encircle groups of samples
+ - added functionality to draw stat ellipses with confidence intervals
 
 CHANGES IN VERSION 2.0.0
 ------------------------
@@ -11,7 +15,9 @@ CHANGES IN VERSION 2.0.0
  - added p-value adjustment for eigencorplot (aleighbrown)
  - eigencorplot now automatically converts non-numeric columns to numeric (aleighbrown)
 
-CHANGES IN VERSION 2.2.0
+CHANGES IN VERSION 1.0.0
 ------------------------
- - added support to overlay variable loadings arrows on biplot
- - better positioning of PC labels in triangular pairs plot
+ - added new function getLoadings, which returns component loadings
+
+
+
