--- a/vignettes/PCAtools.Rmd
+++ b/vignettes/PCAtools.Rmd
@@ -30,7 +30,7 @@ Principal Component Analysis (PCA) is a very powerful technique that has wide ap
 
 ## 1. Download the package from Bioconductor
 
-```{r getPackage, eval=FALSE}
+```{r getPackage, eval = FALSE}
 
     if (!requireNamespace('BiocManager', quietly = TRUE))
         install.packages('BiocManager')
@@ -39,9 +39,12 @@ Principal Component Analysis (PCA) is a very powerful technique that has wide ap
 
 ```
 
-Note: to install development version:
+Note: to install development version direct from GitHub:
 
-```{r getPackageDevel, eval=FALSE}
+```{r getPackageDevel, eval = FALSE}
+
+    if (!requireNamespace('devtools', quietly = TRUE))
+        install.packages('devtools')
 
     devtools::install_github('kevinblighe/PCAtools')
 
@@ -49,7 +52,7 @@ Note: to install development version:
 
 ## 2. Load the package into R session
 
-```{r Load, message=FALSE}
+```{r Load, message = FALSE}
 
     library(PCAtools)
 
@@ -63,104 +66,110 @@ recurrence free survival (RFS) from
 
 First, let's read in and prepare the data:
 
-
 ```{r, message = FALSE}
 
   library(Biobase)
   library(GEOquery)
 
   # load series and platform data from GEO
-  gset <- getGEO('GSE2990', GSEMatrix = TRUE, getGPL = FALSE)
-
-  x <- exprs(gset[[1]])
+    gset <- getGEO('GSE2990', GSEMatrix = TRUE, getGPL = FALSE)
+    mat <- exprs(gset[[1]])
 
   # remove Affymetrix control probes
-  x <- x[-grep('^AFFX', rownames(x)),]
+    mat <- mat[-grep('^AFFX', rownames(mat)),]
 
   # extract information of interest from the phenotype data (pdata)
-  idx <- which(colnames(pData(gset[[1]])) %in%
-    c('age:ch1', 'distant rfs:ch1', 'er:ch1',
-      'ggi:ch1', 'grade:ch1', 'size:ch1',
-      'time rfs:ch1'))
-
-  metadata <- data.frame(pData(gset[[1]])[,idx],
-    row.names = rownames(pData(gset[[1]])))
+   idx <- which(colnames(pData(gset[[1]])) %in%
+      c('relation', 'age:ch1', 'distant rfs:ch1', 'er:ch1',
+        'ggi:ch1', 'grade:ch1', 'size:ch1',
+        'time rfs:ch1'))
+    metadata <- data.frame(pData(gset[[1]])[,idx],
+      row.names = rownames(pData(gset[[1]])))
 
   # tidy column names
-  colnames(metadata) <- c('Age', 'Distant.RFS', 'ER', 'GGI', 'Grade',
-    'Size', 'Time.RFS')
+    colnames(metadata) <- c('Study', 'Age', 'Distant.RFS', 'ER', 'GGI', 'Grade',
+      'Size', 'Time.RFS')
 
-  # prepare certain phenotypes
-  metadata$Age <- as.numeric(gsub('^KJ', NA, metadata$Age))
-  metadata$Distant.RFS <- factor(metadata$Distant.RFS, levels=c(0,1))
-  metadata$ER <- factor(gsub('\\?', NA, metadata$ER), levels=c(0,1))
-  metadata$ER <- factor(ifelse(metadata$ER == 1, 'ER+', 'ER-'), levels = c('ER-', 'ER+'))
-  metadata$GGI <- as.numeric(metadata$GGI)
-  metadata$Grade <- factor(gsub('\\?', NA, metadata$Grade), levels=c(1,2,3))
-  metadata$Grade <- gsub(1, 'Grade 1', gsub(2, 'Grade 2', gsub(3, 'Grade 3', metadata$Grade)))
-  metadata$Grade <- factor(metadata$Grade, levels = c('Grade 1', 'Grade 2', 'Grade 3'))
-  metadata$Size <- as.numeric(metadata$Size)
-  metadata$Time.RFS <- as.numeric(gsub('^KJX|^KJ', NA, metadata$Time.RFS))
+  # prepare certain phenotypes of interest
+    metadata$Study <- gsub('Reanalyzed by: ', '', as.character(metadata$Study))
+    metadata$Age <- as.numeric(gsub('^KJ', NA, as.character(metadata$Age)))
+    metadata$Distant.RFS <- factor(metadata$Distant.RFS,
+      levels = c(0,1))
+    metadata$ER <- factor(gsub('\\?', NA, as.character(metadata$ER)),
+      levels = c(0,1))
+    metadata$ER <- factor(ifelse(metadata$ER == 1, 'ER+', 'ER-'),
+      levels = c('ER-', 'ER+'))
+    metadata$GGI <- as.numeric(as.character(metadata$GGI))
+    metadata$Grade <- factor(gsub('\\?', NA, as.character(metadata$Grade)),
+      levels = c(1,2,3))
+    metadata$Grade <- gsub(1, 'Grade 1', gsub(2, 'Grade 2', gsub(3, 'Grade 3', metadata$Grade)))
+    metadata$Grade <- factor(metadata$Grade, levels = c('Grade 1', 'Grade 2', 'Grade 3'))
+    metadata$Size <- as.numeric(as.character(metadata$Size))
+    metadata$Time.RFS <- as.numeric(gsub('^KJX|^KJ', NA, metadata$Time.RFS))
 
   # remove samples from the pdata that have any NA value
-  discard <- apply(metadata, 1, function(x) any(is.na(x)))
-
-  metadata <- metadata[!discard,]
+    discard <- apply(metadata, 1, function(x) any(is.na(x)))
+    metadata <- metadata[!discard,]
 
   # filter the expression data to match the samples in our pdata
-  x <- x[,which(colnames(x) %in% rownames(metadata))]
+    mat <- mat[,which(colnames(mat) %in% rownames(metadata))]
 
   # check that sample names match exactly between pdata and expression data 
-  all(colnames(x) == rownames(metadata))
+    all(colnames(mat) == rownames(metadata))
 
 ```
 
-Conduct principal component analysis (PCA)
+Conduct principal component analysis (PCA):
 
 ```{r}
 
-  p <- pca(x, metadata = metadata, removeVar = 0.1)
+  p <- pca(mat, metadata = metadata, removeVar = 0.1)
 
 ```
 
 ## A scree plot
 
-```{r ex1, warning = FALSE, fig.height = 7, fig.width = 20, fig.cap = 'Figure 1: A scree plot to show the proportion of explained variance by PC'}
+```{r ex1, warning = FALSE, fig.height = 7, fig.width = 20, fig.cap = 'Figure 1: A scree plot'}
 
-  screeplot(p, axisLabSize = 20, titleLabSize = 22)
+  screeplot(p, axisLabSize = 18, titleLabSize = 22)
 
 ```
 
 ## A bi-plot
 
 Different interpretations of the biplot exist. In the OMICs era, for most
-general users, a biplot is a simple representation of samples in a 2-dimensional space:
+general users, a biplot is a simple representation of samples in a
+2-dimensional space, usually focusing on just the first two PCs:
 
-```{r ex2a, fig.height = 6, fig.width = 7, fig.cap = 'Figure 2a: A bi-plot of PC1 versus PC2'}
+```{r ex2a, eval = FALSE}
 
   biplot(p)
 
 ```
 
-However, the original definition of a biplot by Gabriel KR [@Gabriel] is a plot that plots
-both variables and observatinos (samples) in the same space. The variables are indicated by
-arrows drawn from the origin, which indicate their 'weight' in different directions. We touch
-on this later via the *plotLoadings* function.
+However, the original definition of a biplot by Gabriel KR [@Gabriel] is a
+plot that plots both variables and observatinos (samples) in the same space.
+The variables are indicated by arrows drawn from the origin, which indicate
+their 'weight' in different directions. We touch on this later via the
+*plotLoadings* function.
 
-```{r ex2b, fig.height = 6, fig.width = 7, fig.cap = 'Figure 2b: A bi-plot of PC1 versus PC2'}
+```{r ex2b, fig.height = 6, fig.width = 7, fig.cap = 'Figure 2b: A bi-plot'}
 
   biplot(p, showLoadings = TRUE, lab = NULL)
 
 ```
 
-One of the probes pointing downward is *205225_at*, which targets the *ESR1* gene. This is already
-a useful validation, as the oestrogen receptor, which is in part encoded by *ESR1*, is strongly
-represented by PC2 (y-axis), with negative-to-positive receptor status going from top-to-bottom.
+One of the probes pointing downward is *205225_at*, which targets the *ESR1*
+gene. This is already a useful validation, as the oestrogen receptor, which
+is in part encoded by *ESR1*, is strongly represented by PC2 (y-axis), with
+negative-to-positive receptor status going from top-to-bottom.
+
 More on this later in this vignette.
+
 
 ## A pairs plot
 
-```{r ex3, message = FALSE, fig.height = 10, fig.width = 10, fig.cap = 'Figure 3: A pairs plot, comparing PC1 - PC5 on a pairwise basis'}
+```{r ex3, message = FALSE, fig.height = 10, fig.width = 10, fig.cap = 'Figure 3: A pairs plot'}
 
   pairsplot(p)
 
@@ -168,20 +177,24 @@ More on this later in this vignette.
 
 ## A loadings plot
 
-If the biplot was previously generated with *showLoadings = TRUE*, check how this loadings plot corresponds to the biplot loadings - they should match up for the top hits.
+If the biplot was previously generated with *showLoadings = TRUE*, check how
+this loadings plot corresponds to the biplot loadings - they should match up
+for the top hits.
 
-```{r ex4, fig.height = 6, fig.width = 8, fig.cap = 'Figure 4: Plot the component loadings and label genes most responsible for variation'}
+```{r ex4, fig.height = 6, fig.width = 8, fig.cap = 'Figure 4: A loadings plot'}
 
   plotloadings(p, labSize = 3)
 
 ```
 
+
 ## An eigencor plot
 
-```{r ex5, warning = FALSE, fig.height = 4, fig.width = 8, fig.cap = 'Figure 5: Correlate PCs to metadata variables'}
+```{r ex5, warning = FALSE, fig.height = 4, fig.width = 8, fig.cap = 'Figure 5: An eigencor plot'}
 
   eigencorplot(p,
-    metavars = c('Age','Distant.RFS','ER','GGI','Grade','Size','Time.RFS'))
+    metavars = c('Study','Age','Distant.RFS','ER',
+      'GGI','Grade','Size','Time.RFS'))
 
 ```
 
@@ -199,17 +212,16 @@ while the variable loadings are stored in *loadings*
 ```
 
 
-
 # Advanced features
 
-All plots in PCAtools are highly configurable and should cover virtually all
-general usage requirements. The following sections take a look at some of these
-advanced features, and form a somewhat practical example of how one can use
-PCAtools to make a clinical interpretation of data.
+All functions in *PCAtools* are highly configurable and should cover virtually
+all basic and advanced user requirements. The following sections take a look
+at some of these advanced features, and form a somewhat practical example of
+how one can use *PCAtools* to make a clinical interpretation of data.
 
-First, let's sort out the gene annotation by mapping the probe IDs to gene symbols.
-The array used for this study was the Affymetrix U133a, so let's use the *hgu133a.db*
-Bioconductor package:
+First, let's sort out the gene annotation by mapping the probe IDs to gene
+symbols. The array used for this study was the Affymetrix U133a, so let's use
+the *hgu133a.db* Bioconductor package:
 
 ```{r, messages = FALSE}
 
@@ -226,17 +238,24 @@ Bioconductor package:
     
 ```
 
+
 ## Determine optimum number of PCs to retain
 
-A scree plot on its own just shows the accumulative proportion of explained variation,
-but how can we determine the optimum number of PCs to retain?  *PCAtools* provides two
-metrics for this purpose: elbow method and Horn's parallel analysis [@Horn] [@Buja].
+A scree plot on its own just shows the accumulative proportion of explained
+variation, but how can we determine the optimum number of PCs to retain?
+
+*PCAtools* provides four metrics for this purpose:
+
+* Elbow method
+* Horn's parallel analysis [@Horn] [@Buja].
+* Marchenko-Pastur limit
+* Gavish-Donoho method
 
 Let's perform Horn's parallel analysis first:
 
 ```{r, warning = FALSE}
 
-  horn <- parallelPCA(x)
+  horn <- parallelPCA(mat)
   horn$n
 
 ```
@@ -254,7 +273,7 @@ In most cases, the identified values will disagree. This is because finding the
 correct number of PCs is a difficult task and is akin to finding the 'correct'
 number of clusters in a dataset - there is no correct answer.
 
-Taking the value from Horn's parallel analyis, we can produce a new scree plot:
+Taking these values, we can produce a new scree plot and mark these:
 
 ```{r ex6, fig.height = 7, fig.width = 9, fig.cap = 'Figure 6: Advanced scree plot illustrating optimum number of PCs'}
 
@@ -263,8 +282,11 @@ Taking the value from Horn's parallel analyis, we can produce a new scree plot:
   screeplot(p,
     components = getComponents(p, 1:20),
     vline = c(horn$n, elbow)) +
-    geom_label(aes(x = horn$n + 1, y = 50, label = "Horn's", vjust = -1, size = 8)) +
-    geom_label(aes(x = elbow + 1, y = 50, label = "Elbow", vjust = -1, size = 8))
+
+    geom_label(aes(x = horn$n + 1, y = 50,
+      label = 'Horn\'s', vjust = -1, size = 8)) +
+    geom_label(aes(x = elbow + 1, y = 50,
+      label = 'Elbow method', vjust = -1, size = 8))
 
 ```
 
@@ -272,18 +294,25 @@ If all else fails, one can simply take the number of PCs that contributes to
 a pre-selected total of explained variation, e.g., in this case, 27 PCs account
 for >80% explained variation.
 
+```{r}
+
+  which(cumsum(p$variance) > 80)[1]
+
+```
+
+
 ## Modify bi-plots
 
 The bi-plot comparing PC1 versus PC2 is the most characteristic plot of PCA.
 However, PCA is much more than the bi-plot and much more than PC1 and PC2. This
 said, PC1 and PC2, by the very nature of PCA, are indeed usually the most
-important parts of PCA.
+important parts of a PCA analysis.
 
 In a bi-plot, we can shade the points by different groups and add many more features.
 
-### Colour by a factor from the metadata, use a custom label, add lines through center, and add legend
+### Colour by a metadata factor, use a custom label, add lines through origin, and add legend
 
-```{r ex7, fig.height = 6, fig.width = 8, fig.cap = 'Figure 7: adding lines and a legend to a bi-plot'}
+```{r ex7, fig.height = 7, fig.width = 7.5, fig.cap = 'Figure 7: Colour by a metadata factor, use a custom label, add lines through origin, and add legend'}
 
   biplot(p,
     lab = paste0(p$metadata$Age, ' años'),
@@ -293,26 +322,65 @@ In a bi-plot, we can shade the points by different groups and add many more feat
 
 ```
 
-### Supply custom colours, add more lines, and increase legend size
 
-```{r ex8, message = FALSE, fig.height = 7, fig.width = 7, fig.cap = 'Figure 8: supplying custom colours to a bi-plot'}
+### Supply custom colours and encircle variables by group
+
+The encircle functionality literally draws a polygon around
+each group specified by *colby*. It says nothing about any statistic
+pertaining to each group.
+
+```{r ex8, message = FALSE, fig.height = 7.5, fig.width = 7, fig.cap = 'Figure 8: Supply custom colours and encircle variables by group'}
 
   biplot(p,
-    colby = 'ER', colkey = c('ER+'='forestgreen', 'ER-'='purple'),
+    colby = 'ER', colkey = c('ER+' = 'forestgreen', 'ER-' = 'purple'),
+    # encircle config
+      encircleByGroup = TRUE,
+      encircleFill = TRUE,
+    hline = 0, vline = c(-25, 0, 25),
+    legendPosition = 'top', legendLabSize = 16, legendIconSize = 8.0)
+
+  biplot(p,
+    colby = 'ER', colkey = c('ER+' = 'forestgreen', 'ER-' = 'purple'),
+    encircleByGroup = TRUE, encircleFill = FALSE,
+    encircleAlpha = 1, encircleLineSize = 5,
     hline = 0, vline = c(-25, 0, 25),
     legendPosition = 'top', legendLabSize = 16, legendIconSize = 8.0)
 
 ```
 
-### Change shape based on tumour grade, remove connectors, and add titles
 
-```{r ex9, message = FALSE, eval = FALSE}
+### Stat ellipses
+
+Stat ellipses are also drawn around each group but have a greater statistical
+meaning and can be used, for example, as a strict determination of outlier
+samples. Here, we draw ellipses around each group at the 95% confidence level:
+
+```{r ex9, message = FALSE, fig.height = 7.5, fig.width = 7, fig.cap = 'Figure 9: Stat ellipses'}
 
   biplot(p,
-    colby = 'ER', colkey = c('ER+'='forestgreen', 'ER-'='purple'),
+    colby = 'ER', colkey = c('ER+' = 'forestgreen', 'ER-' = 'purple'),
+    # ellipse config
+      ellipse = TRUE,
+      ellipseConf = 0.95,
+      ellipseFill = TRUE,
+      ellipseAlpha = 1/4,
+      ellipseLineSize = 1.0,
+    xlim = c(-125,125), ylim = c(-50, 80),
     hline = 0, vline = c(-25, 0, 25),
+    legendPosition = 'top', legendLabSize = 16, legendIconSize = 8.0)
+
+```
+
+
+### Change shape based on tumour grade, remove connectors, and add titles
+
+```{r ex10, message = FALSE, eval = FALSE}
+
+  biplot(p,
+    colby = 'ER', colkey = c('ER+' = 'forestgreen', 'ER-' = 'purple'),
+    hline = c(-25, 0, 25), vline = c(-25, 0, 25),
     legendPosition = 'top', legendLabSize = 13, legendIconSize = 8.0,
-    shape = 'Grade', shapekey = c('Grade 1'=15, 'Grade 2'=17, 'Grade 3'=8),
+    shape = 'Grade', shapekey = c('Grade 1' = 15, 'Grade 2' = 17, 'Grade 3' = 8),
     drawConnectors = FALSE,
     title = 'PCA bi-plot',
     subtitle = 'PC1 versus PC2',
@@ -320,14 +388,14 @@ In a bi-plot, we can shade the points by different groups and add many more feat
 
 ```
 
-### Remove labels, modify line types, remove gridlines, and increase point size
+### Modify line types, remove gridlines, and increase point size
 
-```{r ex10a, message = FALSE, fig.height = 5.5, fig.width = 7, fig.cap = 'Figure 10a: removing labels, modifying line types, removing gridlines, and increasing point size in a bi-plot'}
+```{r ex11a, eval = FALSE}
 
   biplot(p,
     lab = NULL,
     colby = 'ER', colkey = c('ER+'='royalblue', 'ER-'='red3'),
-    hline = 0, vline = c(-25, 0, 25),
+    hline = c(-25, 0, 25), vline = c(-25, 0, 25),
     vlineType = c('dotdash', 'solid', 'dashed'),
     gridlines.major = FALSE, gridlines.minor = FALSE,
     pointSize = 5,
@@ -342,7 +410,7 @@ In a bi-plot, we can shade the points by different groups and add many more feat
 
 Let's plot the same as above but with loadings:
 
-```{r ex10b, message = FALSE, fig.height = 5.5, fig.width = 10, fig.cap = 'Figure 10b: removing labels, modifying line types, removing gridlines, and increasing point size in a bi-plot'}
+```{r ex11b, message = FALSE, fig.height = 5.5, fig.width = 10, fig.cap = 'Figure 11b: Modify line types, remove gridlines, and increase point size'}
 
   biplot(p,
     # loadings parameters
@@ -371,10 +439,10 @@ Let's plot the same as above but with loadings:
 There are two ways to colour by a continuous variable. In the first way, we simply
 'add on' a continuous colour scale via *scale_colour_gradient*:
 
-```{r ex11a, fig.height = 5.5, fig.width = 7, fig.cap = 'Figure 11a: colouring by a continuous variable and plotting other PCs in a bi-plot'}
+```{r ex12a, fig.height = 5.5, fig.width = 6, fig.cap = 'Figure 12a: Colour by a continuous variable and plot other PCs'}
 
   # add ESR1 gene expression to the metadata
-  p$metadata$ESR1 <- x["205225_at",]
+  p$metadata$ESR1 <- mat['205225_at',]
 
   biplot(p,
     x = 'PC2', y = 'PC3',
@@ -391,7 +459,7 @@ There are two ways to colour by a continuous variable. In the first way, we simp
 We can also just permit that the internal *ggplot2* engine picks the colour
 scheme - here, we also plot PC10 versus PC50:
 
-```{r ex11b, eval = FALSE}
+```{r ex12b, eval = FALSE}
 
   biplot(p, x = 'PC10', y = 'PC50',
     lab = NULL,
@@ -421,7 +489,7 @@ can shut off titles and axis labeling to save space. Reducing point size and
 colouring by a variable of interest can additionally help us to rapidly skim
 over the data.
 
-```{r ex12, message = FALSE, fig.height = 8, fig.width = 7, fig.cap = 'Figure 12: maximising available space in a pairs plot'}
+```{r ex13, message = FALSE, fig.height = 8, fig.width = 7, fig.cap = 'Figure 13: Quickly explore potentially informative PCs via a pairs plot'}
 
   pairsplot(p,
     components = getComponents(p, c(1:10)),
@@ -440,7 +508,7 @@ setting 'triangle = FALSE'. In this case, we can further control the layout
 with the 'ncol' and 'nrow' parameters, although, the function will
 automatically determine these based on your input data.
 
-```{r ex13, fig.height = 5.5, fig.width = 6, fig.cap = 'Figure 13: arranging a pairs plot horizontally'}
+```{r ex14, fig.height = 5.5, fig.width = 6, fig.cap = 'Figure 14: arranging a pairs plot horizontally'}
 
   pairsplot(p,
     components = getComponents(p, c(4,33,11,1)),
@@ -462,15 +530,14 @@ are segregating a factor of interest, we can explore further the genes that
 are driving these differences along each PC.
 
 For each PC of interest, 'plotloadings' determines the variables falling within
-the top/bottom 5% of the loadings range, and then creates a final consensus list of
-these. These variables are then plotted.
+the top/bottom 5% of the loadings range, and then creates a final consensus
+list of these. These variables are then plotted.
 
 The loadings plot, like all others, is highly configurable. To modify the
-cut-off for inclusion / exclusion of variables, we use 'rangeRetain', where
-0.01 equates to the top/bottom 1% of the loadings range per PC. We can also
-add a title, subtitle, and caption, and alter the shape and colour scheme.
+cut-off for inclusion / exclusion of variables, we use *rangeRetain*, where
+0.01 equates to the top/bottom 1% of the loadings range per PC.
 
-```{r ex14, fig.height = 5.5, fig.width = 7, fig.cap = 'Figure 14: modifying cut-off for labeling in a loadings plot'}
+```{r ex15, fig.height = 5.5, fig.width = 7, fig.cap = 'Figure 15: Determine the variables that drive variation among each PC'}
 
   plotloadings(p,
     rangeRetain = 0.01,
@@ -488,13 +555,13 @@ At least one interesting finding is *205225_at* / *ESR1*, which is by far the ge
 most responsible for variation along PC2. The previous bi-plots showed that
 this PC also segregated ER+ from ER- patients. The other results could be
 explored. Also, from the biplots with loadings that we have already generated,
-this results is also verified in these.
+this result is also verified in these.
 
 With the loadings plot, in addition, we can instead plot absolute values and
 modify the point sizes to be proportional to the loadings. We can also switch
 off the line connectors and plot the loadings for any PCs
 
-```{r ex15, fig.height = 7, fig.width = 9, fig.cap = 'Figure 15: plotting absolute component loadings'}
+```{r ex16, fig.height = 7, fig.width = 9, fig.cap = 'Figure 16: plotting absolute component loadings'}
 
   plotloadings(p,
     components = getComponents(p, c(4,33,11,1)),
@@ -512,9 +579,9 @@ off the line connectors and plot the loadings for any PCs
 
 ## Correlate the principal components back to the clinical data
 
-Further exploration of the PCs can come through correlations with clinical data.
-This is also a mostly untapped resource in the era of 'big data' and can help
-to guide an analysis down a particular path (or not!).
+Further exploration of the PCs can come through correlations with clinical
+data. This is also a mostly untapped resource in the era of 'big data' and
+can help to guide an analysis down a particular path.
 
 We may wish, for example, to correlate all PCs that account for 80% variation in
 our dataset and then explore further the PCs that have statistically significant
@@ -524,11 +591,12 @@ correlations.
 [CorLevelPlot](https://github.com/kevinblighe/CorLevelPlot). Further examples
 can be found there.
 
-```{r ex16, warning = FALSE, fig.height = 4, fig.width = 12, fig.cap = 'Figure 16: correlating PCs that account for at least 80% variation to clinical variables'}
+```{r ex17a, warning = FALSE, fig.height = 4.25, fig.width = 12, fig.cap = 'Figure 17a: Correlate the principal components back to the clinical data'}
 
   eigencorplot(p,
     components = getComponents(p, 1:27),
-    metavars = c('Age','Distant.RFS','ER','GGI','Grade','Size','Time.RFS'),
+    metavars = c('Study','Age','Distant.RFS','ER',
+      'GGI','Grade','Size','Time.RFS'),
     col = c('darkblue', 'blue2', 'black', 'red2', 'darkred'),
     cexCorval = 0.7,
     colCorval = 'white',
@@ -547,11 +615,12 @@ can be found there.
 We can also supply different cut-offs for statistical significance, apply
 p-value adjustment, plot R-squared values, and specify correlation method:
 
-```{r ex17, warning = FALSE, fig.height = 5, fig.width = 12, fig.cap = 'Figure 17: modifying cut-offs and symbols for statistical significance in eigencorplot'}
+```{r ex17b, warning = FALSE, fig.height = 5, fig.width = 12, fig.cap = 'Figure 17b: Correlate the principal components back to the clinical data'}
 
   eigencorplot(p,
     components = getComponents(p, 1:horn$n),
-    metavars = c('Age','Distant.RFS','ER','GGI','Grade','Size','Time.RFS'),
+    metavars = c('Study','Age','Distant.RFS','ER','GGI',
+      'Grade','Size','Time.RFS'),
     col = c('white', 'cornsilk1', 'gold', 'forestgreen', 'darkgreen'),
     cexCorval = 1.2,
     fontCorval = 2,
@@ -576,6 +645,7 @@ It comes as no surprise that the gene driving most variationn along PC2 is
 
 This information is, of course, not new, but shows how PCA is much more than
 just a bi-plot used to identify outliers!
+
 
 ## Plot the entire project on a single panel
 
@@ -628,8 +698,8 @@ just a bi-plot used to identify outliers!
 
   peigencor <- eigencorplot(p,
     components = getComponents(p, 1:10),
-    metavars = c('Age','Distant.RFS','ER','GGI','Grade','Size','Time.RFS'),
-    #col = c('royalblue', '', 'gold', 'forestgreen', 'darkgreen'),
+    metavars = c('Study','Age','Distant.RFS','ER',
+      'GGI','Grade','Size','Time.RFS'),
     cexCorval = 1.0,
     fontCorval = 2,
     posLab = 'all', 
@@ -671,6 +741,35 @@ just a bi-plot used to identify outliers!
 
 ```
 
+## Make predictions on new data
+
+It is possible to use the variable loadings as part of a matrix calculation
+to 'predict' principal component eigenvectors in new data. This is elaborated
+in a posting by Pandula Priyadarshana: [How to use Principal Component Analysis (PCA) to make Predictions](https://rpubs.com/PandulaP/PCA_for_Predictions). 
+
+The *pca* class, which is created by *PCAtools*, is not configured to work with
+*stats::predict*; however, trusty *prcomp* class **is** configured. We can manually
+create a *prcomp* object and then use that in model prediction, as elaborated
+in the following code chunk:
+
+```{r} 
+
+  p <- pca(mat, metadata = metadata, removeVar = 0.1)
+  p.prcomp <- list(sdev = p$sdev,
+    rotation = data.matrix(p$loadings),
+    x = data.matrix(p$rotated),
+    center = TRUE, scale = TRUE)
+
+  class(p.prcomp) <- 'prcomp'
+
+  # for this simple example, just use a chunk of
+  # the original data for the prediction
+  newdata <- t(mat[,seq(1,20)])
+  predict(p.prcomp, newdata = newdata)[,1:5]
+
+```
+
+
 # Acknowledgments
 
 The development of *PCAtools* has benefited from contributions
@@ -682,6 +781,9 @@ and suggestions from:
 * Anna-Leigh Brown
 * Vincent Carey
 * Vince Vu
+* Guido Hooiveld
+* pwwang
+* Pandula Priyadarshana
 
 # Session info
 
